# macpak

./: LICENSE  README.md  pyproject.toml  requirements.txt
src/macpak/: __init__.py
